test/error/break_in_let.snek
(let ((x 5)) (break x))
